force-app/main/default/objects/Payer_Verification__c/Payer_Verification__c.object-meta.xml
<CustomObject>
    <label>Payer Verification</label>
    <nameField>
        <label>Payer Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payer Verfications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>