force-app/main/default/objects/Payer_Verification__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Payer Verfications</relationshipLabel>
    <relationshipName>Payer_Verfications</relationshipName>
    <type>Lookup</type>
</CustomField>