force-app/main/default/objects/Payer_Verification__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Payer Verfications</relationshipLabel>
    <relationshipName>Payer_Verfications</relationshipName>
    <type>Lookup</type>
</CustomField>