force-app/main/default/objects/Payer_Verification__c/fields/Patient_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Eligibility_Status__c</fullName>
    <formula>TEXT(Patient__r.Payer_Eligibility_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Eligibility Status</label>
    <type>Text</type>
</CustomField>