force-app/main/default/objects/Payer_Verification__c/fields/Primary_Payer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payer__c</fullName>
    <label>Primary Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>