force-app/main/default/objects/Payer_Verification__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight Medicare B</fullName>
            </value>
            <value>
                <fullName>Has Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>No Coverage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Has Medicare Advantage, Non Payer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>