force-app/main/default/objects/Payer_Verification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Eligible__c</columns>
    <columns>Patient_Eligibility_Status__c</columns>
    <columns>Scenario__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Primary_Payer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>