force-app/main/default/objects/Payer_Verification__c/listViews/Medicare_Advantage_Check.listView-meta.xml
<ListView>
    <fullName>Medicare_Advantage_Check</fullName>
    <columns>NAME</columns>
    <columns>Eligible__c</columns>
    <columns>Scenario__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scenario__c</field>
        <operation>equals</operation>
        <value>Has Medicare Advantage</value>
    </filters>
    <filters>
        <field>Patient_Eligibility_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Medicare Advantage Check</label>
</ListView>